@@ -4,6 +4,11 @@ Changelog for plone.app.kss
 
 plone.app.kss - 1.4dev Unreleased
 
+    - Translate message and message type passed to
+      PloneCommands.issuePortalMessage.
+      This fixes http://dev.plone.org/plone/ticket/7282
+      [maurits]
+
     - Adjusted deprecation warnings to point to Plone 4.0 instead of Plone 3.5
       since we changed the version numbering again.
       [hannosch]
